--- a/WorkshopSlides.Rmd
+++ b/WorkshopSlides.Rmd
@@ -26,11 +26,49 @@ source("coursematerial/workshopFunctions.R")
 
 ## Shiny for R
 
+- Housekeeping
 - Introduction to Shiny
 - Gapminder data
 - Running example: visualising the gapminder data
 - Deploying Shiny apps
 
+## Housekeeping
+
+* Fire exit
+* Toilets
+* Coffee breaks and lunch
+* Course timing
+* Feedback ([form](http://bit.ly/2xP95Ef) and verbal)
+
+ 
+## Research IT
+Described on the [IT Services website](http://www.itservices.manchester.ac.uk/research/)
+
+Announcements given via the [Research IT blog](https://researchitnews.org/) and newsletter (sign up via the blog page) and on Twitter [@﻿UoM_eResearch](http://twitter.com/uom_eresearch)
+
+* [Training courses](http://ri.itservices.manchester.ac.uk/training) teach computing skills for research
+* Advice and guidance about research software
+* Access to specialist support and consultancy e.g. code reviews
+* Access to HPC systems - where you can run R.
+* [Full list of services on offer](http://www.itservices.manchester.ac.uk/research/services/)
+
+Get in touch via the [support centre](http://supportcentre.manchester.ac.uk/)
+
+
+## R user groups
+
+R user groups are a great way of finding out more about R.  
+
+* [University of Manchester R user group](https://rumgroup.github.io/Home/)
+    + Meets monthly
+    + [Email list](https://listserv.manchester.ac.uk/cgi-bin/wa?A0=RUM) for announcements, questions etc.
+    + Has tea, coffee and biscuits
+    + Separate beginners' group
+* [ManchesterR](http://www.rmanchester.org/)
+    + City-wide group (not affiliated with the university)
+    + Meets quarterly 
+    + Typically 3-4 presentations; often a commercial focus.
+  
 ## Introduction to Shiny
 - Shiny lets us easily and quickly build web apps using R
 - Can use pretty much any output from R within our app
