--- a/WorkshopSlides.Rmd
+++ b/WorkshopSlides.Rmd
@@ -99,7 +99,7 @@ For example:
 
 ##
 
-<iframe src="https://shinyapp.mawds.co.uk/app/worked_example/" style="border:none; width:100%;  height:700px"></iframe>
+<iframe src="https://shiny.its.manchester.ac.uk/zzalsdme/mindthegap/" style="border:none; width:100%;  height:700px"></iframe>
 
 ## Workshop Aims
 
